--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li>博客</li>
         <li>摄影</li>
         <li>联系</li>
+        <li><a href="/about.html">关于</a></li>
       </ul>
     </nav>
 
